# barista

./: .gitignore  pyproject.toml
barista/: main.py
barista/services/: audio_recorder.py  response_agent.py  speech_to_text.py  text_to_speech.py  wake_word_detector.py
barista/utils/: audio_player.py  sequential_queue.py
tests/: test_sequential_queue.py
