[tool.poetry]
name = "barista"
version = "0.1.0"
description = ""
authors = ["Jack W <jackweatherilt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pvporcupine = "^3.0.0"
pygame = "^2.5.2"
openai = "^0.28.1"
pvcobra = "^2.0.0"
pvrecorder = "^1.2.1"
litellm = "^0.13.1"
google-cloud-texttospeech = "^2.14.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
